[gd_scene load_steps=8 format=2]

[ext_resource path="res://Presentation.gd" type="Script" id=1]
[ext_resource path="res://ST-UI-Text-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://PresentationText.gd" type="Script" id=3]
[ext_resource path="res://Symbola_hint.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SF-UI-Text-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Button-Text.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )
fallback/0 = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
color = Color( 0, 0, 0, 1 )

[node name="PresentationText" type="Label" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 2 )
valign = 1
script = ExtResource( 3 )

[node name="PresentationImage" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 35.0
margin_right = -35.0
margin_bottom = -35.0
expand = true
stretch_mode = 6

[node name="Background2" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="FileDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
rect_min_size = Vector2( 640, 480 )
window_title = "Open a File"
dialog_hide_on_ok = true
mode = 0
access = 2
current_dir = "/home/richards/Godot/xptp"
current_path = "/home/richards/Godot/xptp/"

[node name="MainMenu" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -150.0
rect_min_size = Vector2( 640, 320 )

[node name="MenuContainer" type="VBoxContainer" parent="MainMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
alignment = 1

[node name="DarkMode" type="CheckButton" parent="MainMenu/MenuContainer"]
margin_top = 62.0
margin_right = 540.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
pressed = true
text = "     t: Dark Mode ðŸ’¡"

[node name="OpenFileButton" type="Button" parent="MainMenu/MenuContainer"]
margin_top = 111.0
margin_right = 540.0
margin_bottom = 154.0
rect_pivot_offset = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
text = "     o: Open ðŸ“‚"
align = 0

[node name="WindowButton" type="Button" parent="MainMenu/MenuContainer"]
margin_top = 158.0
margin_right = 540.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 6 )
text = "    w: Window Mode (window)"
align = 0

[node name="QuitButton" type="Button" parent="MainMenu/MenuContainer"]
margin_top = 205.0
margin_right = 540.0
margin_bottom = 248.0
custom_fonts/font = ExtResource( 6 )
text = "     q: Quit ðŸšª"
align = 0

[connection signal="resized" from="Background/PresentationText" to="Background/PresentationText" method="_on_PresentationText_resized"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="toggled" from="MainMenu/MenuContainer/DarkMode" to="." method="_on_DarkMode_toggled"]
[connection signal="pressed" from="MainMenu/MenuContainer/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuContainer/WindowButton" to="." method="_on_WindowButton_pressed"]
[connection signal="pressed" from="MainMenu/MenuContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
